testdata/baselines/reference/submodule/conformance/nodeModulesImportAttributes(module=nodenext).errors.txt
error TS2468: Cannot find global value 'Promise'.
index.ts(1,18): error TS2307: Cannot find module './package.json' or its corresponding type declarations.
index.ts(1,35): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
otherc.cts(1,18): error TS2307: Cannot find module './package.json' or its corresponding type declarations.
otherc.cts(1,35): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
otherc.cts(2,15): error TS2712: A dynamic import call in ES5 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
otherc.cts(2,22): error TS2307: Cannot find module './package.json' or its corresponding type declarations.


!!! error TS2468: Cannot find global value 'Promise'.
==== index.ts (2 errors) ====
    import json from "./package.json" with { type: "json" };
                     ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './package.json' or its corresponding type declarations.
                                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
==== otherc.cts (4 errors) ====
    import json from "./package.json" with { type: "json" }; // should error, cjs mode imports don't support attributes
                     ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './package.json' or its corresponding type declarations.
                                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    const json2 = import("./package.json", { with: { type: "json" } }); // should be fine
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2712: A dynamic import call in ES5 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
                         ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './package.json' or its corresponding type declarations.
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "private": true,
        "type": "module"
    }
    